# myapp/swagger.json
@@ -9,6 +9,18 @@
     {
       "name": "Device",
       "description": "Operations about Devices"
+    },
+    {
+      "name": "Room",
+      "description": "Operations about Rooms"
+    },
+    {
+      "name": "Routine",
+      "description": "Operations about Routines"
+    },
+    {
+      "name": "Provider",
+      "description": "Operations about Providers"
     }
   ],
   "schemes": [
@@ -169,6 +181,468 @@
           }
         }
       }
+    },
+    "/rooms": {
+      "get": {
+        "tags": [
+          "Room"
+        ],
+        "summary": "Get all Rooms",
+        "description": "",
+        "operationId": "getAllRooms",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/Room"
+            }
+          },
+          "400": {
+            "description": "Invalid id supplied"
+          },
+          "404": {
+            "description": "Room not found"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Room"
+        ],
+        "summary": "Create Room",
+        "description": "This can only be done by the logged in user.",
+        "operationId": "createRoom",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Created Room object",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Room"
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": "successful operation"
+          }
+        }
+      }
+    },
+    "/rooms/{roomId}": {
+      "get": {
+        "tags": [
+          "Room"
+        ],
+        "summary": "Get Room by Id",
+        "description": "",
+        "operationId": "getRoomById",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "roomId",
+            "in": "path",
+            "description": "The id that needs to be fetched.",
+            "required": true,
+            "type": "integer"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/Room"
+            }
+          },
+          "400": {
+            "description": "Invalid id supplied"
+          },
+          "404": {
+            "description": "Room not found"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Room"
+        ],
+        "summary": "Updated Room",
+        "description": "This can only be done by the logged in Room.",
+        "operationId": "updateRoom",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "roomId",
+            "in": "path",
+            "description": "id that needs to be updated",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Updated id object",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Room"
+            }
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "Invalid room supplied"
+          },
+          "404": {
+            "description": "Room not found"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Room"
+        ],
+        "summary": "Delete Room",
+        "operationId": "deleteRoom",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "roomId",
+            "in": "path",
+            "description": "The id that needs to be deleted",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "Invalid id supplied"
+          },
+          "404": {
+            "description": "Room not found"
+          }
+        }
+      }
+    },
+    "/routines": {
+      "get": {
+        "tags": [
+          "Routine"
+        ],
+        "summary": "Get all Routines",
+        "description": "",
+        "operationId": "getAllRoutines",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/Routine"
+            }
+          },
+          "400": {
+            "description": "Invalid id supplied"
+          },
+          "404": {
+            "description": "Routine not found"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Routine"
+        ],
+        "summary": "Create Routine",
+        "description": "This can only be done by the logged in user.",
+        "operationId": "createRoutine",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Created Routine object",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Routine"
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": "successful operation"
+          }
+        }
+      }
+    },
+    "/routines/{routineId}": {
+      "get": {
+        "tags": [
+          "Routine"
+        ],
+        "summary": "Get Routine by Id",
+        "description": "",
+        "operationId": "getRoutineById",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "routineId",
+            "in": "path",
+            "description": "The id that needs to be fetched.",
+            "required": true,
+            "type": "integer"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/Routine"
+            }
+          },
+          "400": {
+            "description": "Invalid id supplied"
+          },
+          "404": {
+            "description": "Routine not found"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Routine"
+        ],
+        "summary": "Updated Routine",
+        "description": "This can only be done by the logged in Routine.",
+        "operationId": "updateRoutine",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "routineId",
+            "in": "path",
+            "description": "id that needs to be updated",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Updated id object",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Routine"
+            }
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "Invalid Routine supplied"
+          },
+          "404": {
+            "description": "Routine not found"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Routine"
+        ],
+        "summary": "Delete Routine",
+        "operationId": "deleteRoutine",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "routineId",
+            "in": "path",
+            "description": "The id that needs to be deleted",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "Invalid id supplied"
+          },
+          "404": {
+            "description": "Routine not found"
+          }
+        }
+      }
+    },
+    "/providers": {
+      "get": {
+        "tags": [
+          "Provider"
+        ],
+        "summary": "Get all Providers",
+        "description": "",
+        "operationId": "getAllProviders",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/Provider"
+            }
+          },
+          "400": {
+            "description": "Invalid id supplied"
+          },
+          "404": {
+            "description": "Provider not found"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Provider"
+        ],
+        "summary": "Create Provider",
+        "description": "This can only be done by the logged in user.",
+        "operationId": "createProvider",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Created Provider object",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Provider"
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": "successful operation"
+          }
+        }
+      }
+    },
+    "/providers/{providerId}": {
+      "get": {
+        "tags": [
+          "Provider"
+        ],
+        "summary": "Get Provider by Id",
+        "description": "",
+        "operationId": "getProviderById",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "providerId",
+            "in": "path",
+            "description": "The id that needs to be fetched.",
+            "required": true,
+            "type": "integer"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/Provider"
+            }
+          },
+          "400": {
+            "description": "Invalid id supplied"
+          },
+          "404": {
+            "description": "Provider not found"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Provider"
+        ],
+        "summary": "Updated Provider",
+        "description": "This can only be done by the logged in Provider.",
+        "operationId": "updateProvider",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "providerId",
+            "in": "path",
+            "description": "id that needs to be updated",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Updated id object",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Provider"
+            }
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "Invalid Provider supplied"
+          },
+          "404": {
+            "description": "Provider not found"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Provider"
+        ],
+        "summary": "Delete Provider",
+        "operationId": "deleteProvider",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "providerId",
+            "in": "path",
+            "description": "The id that needs to be deleted",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "Invalid id supplied"
+          },
+          "404": {
+            "description": "Provider not found"
+          }
+        }
+      }
     }
   },
   "definitions": {
@@ -194,6 +668,70 @@
         "active": {
           "type": "boolean",
           "default": true
+        }
+      }
+    },
+    "Room": {
+      "type": "object",
+      "required": [
+        "name"
+      ],
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "name": {
+          "type": "string"
+        }
+      }
+    },
+    "Routine": {
+      "type": "object",
+      "required": [
+        "name",
+        "userId",
+        "deviceId"
+      ],
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "name": {
+          "type": "string"
+        },
+        "schedule": {
+          "type": "string"
+        },
+        "userId": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "deviceId": {
+          "type": "integer",
+          "format": "int64"
+        }
+      }
+    },
+    "Provider": {
+      "type": "object",
+      "required": [
+        "name"
+      ],
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "name": {
+          "type": "string"
+        },
+        "SSO": {
+          "type": "string"
+        },
+        "connection": {
+          "type": "string"
         }
       }
     }
